tests/fixtures/invalid/divmod_bool_str.py
# Cannot call divmod() with Bool, Str
x = divmod(True, "hello")
